# Central-Technology-Tower

./: .gitignore  AI_Agent_Programme_Plan.xlsx  AI_Agent_Programme_Roadmap.pptx  README.md  build_pptx.py  build_xlsx.py
docs/adr/: 0001-bedrock-model-selection.md  0002-teams-integration-and-auto-distribution.md  README.md
phase1_admin_agent/: .env.example  README.md  pyproject.toml  requirements.txt  run.sh
phase1_admin_agent/aws/: README.md  cloudformation.yaml
phase1_admin_agent/aws/screenshots/: README.md
phase1_admin_agent/aws/screenshots/outputs/: README.md
phase1_admin_agent/samples/: sample_meeting.vtt
phase1_admin_agent/src/admin_agent/: __init__.py  cli.py  config.py  extraction.py  ingestion.py  minutes.py  models.py  pipeline.py  repository.py
phase1_admin_agent/tests/: test_pipeline.py
