[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctt-admin-agent"
version = "0.1.0"
description = "Phase 1 MVP: Administrative AI Agent for meeting administration (AWS)"
requires-python = ">=3.10"
dependencies = ["boto3>=1.34.0"]

[project.optional-dependencies]
docx = ["python-docx>=1.1.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
admin-agent = "admin_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
